added sleppDuration for bot